--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,9 +15,16 @@
 #slide {
   border: 1px solid #eee;
   padding: 1rem;
-  min-height: 300px;
+  display: inline-block;
+  min-height: 150px;
+  min-width: 500px;
+  background-color: #5bc8d6;
 }
 
 button {
   min-width: 80px;
+  background-color: rgb(97, 147, 221);
+  border-radius: 5px;
+  margin: 2px;
+  border:1px solid black(150, 85, 24);
 }
