update seventh react project

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,11 +19,12 @@
   min-height: 150px;
   min-width: 500px;
   background-color: #5bc8d6;
+  border-radius: 10px;
 }
 
 button {
   min-width: 80px;
-  background-color: rgb(97, 147, 221);
+  background-color: rgb(63, 109, 177);
   border-radius: 5px;
   margin: 2px;
   border:1px solid black(150, 85, 24);
